--- a/app/signup/signup.module.css
+++ b/app/signup/signup.module.css
@@ -88,6 +88,17 @@
     transition: border-color 0.2s, box-shadow 0.2s;
     outline: none;
     background: var(--bg-primary);
+    color: var(--text-primary);
+}
+
+/* Fix for browser autofill in dark mode */
+.input:-webkit-autofill,
+.input:-webkit-autofill:hover,
+.input:-webkit-autofill:focus,
+.input:-webkit-autofill:active {
+    -webkit-text-fill-color: var(--text-primary);
+    -webkit-box-shadow: 0 0 0 30px var(--bg-primary) inset !important;
+    transition: background-color 5000s ease-in-out 0s;
 }
 
 .input:focus {
